BS5: Fix CBReview dropdown overflow
This whole section is going to need to be reviewed (pun intended), but for now just making it act the same as with bootstrap3

--- a/frontend/css/cbreviewmodal.less
+++ b/frontend/css/cbreviewmodal.less
@@ -5,6 +5,7 @@
 
     .dropdown-toggle {
       font-weight: bold;
+      white-space: normal;
       .caret {
         margin-left: 6px;
       }
